--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -1,5 +1,5 @@
 # Login Page
-login.title=Welcome to CMMS System
+login.title=CMMS System
 login.userId=User ID
 login.username=User ID
 login.password=Password
@@ -11,6 +11,13 @@ login.error.locked=Your account has been locked
 login.error.expired=Your account has expired
 login.error.credentials=Invalid credentials
 login.error.required=Username and password are required
+
+# Log out
+logout.title=Logout
+logout.message=Are you sure you want to logout?
+logout.success=Successfully logged out
+logout.error=Error occurred while logging out
+logout.button=Logout
 
 # Common
 logout.button=Logout
@@ -45,3 +52,36 @@ userInfo.company=Company
 userInfo.site=Site
 userInfo.dept=Department
 userInfo.user=User
+
+# Inspection
+inspection.label.id=Inspection ID:
+inspection.label.name=Inspection Name:
+inspection.label.plant=Plant ID:
+inspection.label.site=Site ID:
+inspection.label.jobType=Job Type:
+inspection.label.performDept=Performing Dept:
+inspection.label.fileGroup=File Group ID:
+inspection.label.note=Note:
+inspection.validation.required.id=Inspection ID is required.
+inspection.validation.required.name=Inspection Name is required.
+inspection.validation.required.site=Site ID is required.
+inspection.header.details=Inspection Details
+inspection.header.list=Inspection List
+inspection.list.title=Inspection List
+inspection.list.header=Inspection List
+inspection.list.empty=No inspections found  
+inspection.list.column.id=Inspection ID
+inspection.list.column.name=Inspection Name 
+inspection.list.column.plant=Plant ID
+inspection.list.column.jobType=Job Type
+inspection.list.column.site=Site ID
+inspection.list.column.performDept=Performing Dept
+inspection.list.column.fileGroup=File Group ID
+inspection.list.column.note=Note
+inspection.list.column.createdBy=Created By
+inspection.list.column.createdDate=Created Date
+inspection.button.add=Add Inspection
+inspection.button.schedules=Schedules
+inspection.button.edit=Edit Inspection
+inspection.button.delete=Delete Inspection
+inspection.delete.confirm=Are you sure you want to delete this inspection?
