--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -54,6 +54,14 @@ userInfo.dept=Department
 userInfo.user=User
 
 # Inspection
+inspectionId=Inspection
+inspectionName=Inspection Name
+plantId=Plant ID
+siteId=Site ID
+jobType=Job Type
+performDept=Performing Dept
+fileGroupId=File Group ID
+note=Note
 inspection.label.id=Inspection ID:
 inspection.label.name=Inspection Name:
 inspection.label.plant=Plant ID:
