--- a/src/main/resources/messages/messages_ko.properties
+++ b/src/main/resources/messages/messages_ko.properties
@@ -54,6 +54,15 @@ userInfo.dept=부서
 userInfo.user=사용자
 
 # Inspection
+inspectionId=점검 ID
+inspectionName=점검명
+plantId=설비 ID
+siteId=사이트 ID
+jobType=작업 유형
+performDept=담당 부서
+fileGroupId=파일 그룹 ID
+note=비고
+inspection.schedule=예방점검 일정
 inspection.label.id=예방점검 번호
 inspection.label.name=예방점검명명
 inspection.label.plant=설비번호
