Add inspection result handling and improve forms

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -93,3 +93,10 @@ inspection.button.schedules=Schedules
 inspection.button.edit=Edit Inspection
 inspection.button.delete=Delete Inspection
 inspection.delete.confirm=Are you sure you want to delete this inspection?
+inspection.button.result=Results
+inspection.result.title=Input Inspection Result
+inspection.items.result=Result
+inspection.scheduleId=Schedule
+inspection.scheduleDate=Schedule Date
+inspection.executeDate=Execute Date
+
