--- a/src/main/resources/messages/messages_ko.properties
+++ b/src/main/resources/messages/messages_ko.properties
@@ -95,3 +95,10 @@ inspection.items.name=항목명
 inspection.items.lower=하한값
 inspection.items.upper=상한값
 inspection.items.standard=기준값
+inspection.button.result=결과입력
+inspection.result.title=점검 결과 입력
+inspection.items.result=결과값
+inspection.scheduleId=일정
+inspection.scheduleDate=예정일
+inspection.executeDate=실시일
+
