--- a/bin/main/messages/messages.properties
+++ b/bin/main/messages/messages.properties
@@ -1,47 +1,2 @@
 # Login Page
-login.title=CMMS 시스템에 오신 것을 환영합니다
-login.userId=사용자 ID
-login.username=사용자 ID
-login.password=비밀번호
-login.submitButton=로그인
-login.error=사용자 ID 또는 비밀번호가 올바르지 않습니다
-login.error.invalid=사용자 ID 또는 비밀번호가 올바르지 않습니다
-login.error.disabled=계정이 비활성화되었습니다
-login.error.locked=계정이 잠겼습니다
-login.error.expired=계정이 만료되었습니다
-login.error.credentials=인증 정보가 올바르지 않습니다
-login.error.required=사용자 ID와 비밀번호를 입력해주세요
-
-# Common
-logout.button=로그아웃
-common.save=저장
-common.cancel=취소
-common.delete=삭제
-common.edit=수정
-common.search=검색
-common.reset=초기화
-common.back=뒤로
-common.confirm=확인
-common.success=성공
-common.error=오류
-common.warning=경고
-common.info=안내
-
-# Memo
-memoList.title=메모 목록
-memoList.new=새 메모
-memoList.edit=메모 수정
-memoList.delete=메모 삭제
-memoList.pin=메모 고정
-memoList.unpin=메모 고정 해제
-memoList.comment=댓글
-memoList.viewCount=조회수
-memoList.createdBy=작성자
-memoList.createdDate=작성일
-
-# User Info
-userInfo.format={0}({1})/{2}({3})/{4}({5})/{6}({7})
-userInfo.company=회사
-userInfo.site=사이트
-userInfo.dept=부서
-userInfo.user=사용자
+login.title=messages
